# TIAGo-Simulation

./: .gitignore  .gitmodules  README.md  terminal.txt
ros2_ws/: frames_2026-02-04_11.33.55.gv
ros2_ws/src/launch_sim/: package.xml  setup.py
ros2_ws/src/launch_sim/launch/: start_exercise.launch.py  start_exercise1.launch.py
ros2_ws/src/launch_sim/rviz/: my_tiago_moveit.rviz
ros2_ws/src/launch_sim/worlds/: pickup_test.world  sim_world.world  sim_world1.world  sim_world_objects.world  small_sim_world_obj.world
ros2_ws/src/my_tiago_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_tiago_sim/config/: tiago_base_controller.yaml
ros2_ws/src/my_tiago_sim/launch/: tiago_world.launch.py
ros2_ws/src/my_tiago_sim/models/room/: model.sdf
ros2_ws/src/my_tiago_sim/models/wall/: model.sdf
ros2_ws/src/my_tiago_sim/my_tiago_sim/: tiago_base_control.py
ros2_ws/src/my_tiago_sim/worlds/: sim_world.sdf  sim_world.world  sim_world1.world
ros2_ws/src/tiago_arm_control/: CMakeLists.txt  package.xml
ros2_ws/src/tiago_arm_control/src/: TIAGOController.cpp  arm_control.cpp  grab_pose_control.cpp  gripper_control.cpp  lift_arm_control.cpp  retract_arm_control.cpp
ros2_ws/src/tiago_arm_control/srv/: PickObject.srv
ros2_ws/src/tiago_base_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/tiago_base_control/tiago_base_control/: base_control.py  oldCopy.py
ros2_ws/src/tiago_sim_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/tiago_sim_control/launch/: my_tiago_world.launch.py
ros2_ws/src/tiago_sim_control/tiago_sim_control/: tiago_base_driver.py
ros2_ws/src/tiago_sim_control/worlds/: tiago_test.wbt
